# doxoracle

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEMO-SCRIPT.md  README.md  SUBMISSION.md  TECHNICAL.md  package-lock.json  package.json  vercel.json
idls/: txoracle.json
programs/doxoracle-escrow/: Cargo.toml
programs/doxoracle-escrow/src/: lib.rs
scripts/: activate-txline.mjs  resolve-admin.mjs  resolve-verified.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/api/admin/markets/: route.ts
src/app/api/admin/resolve/: route.ts
src/app/api/cron/resolve/: route.ts
src/app/api/fixtures/: route.ts
src/app/api/live/[fixtureId]/: route.ts
src/app/api/proof/[fixtureId]/: route.ts
src/app/bets/: page.tsx
src/app/dashboard/: page.tsx
src/app/how-it-works/: page.tsx
src/app/leaderboard/: page.tsx
src/app/markets/: page.tsx
src/app/markets/[id]/: page.tsx
src/app/receipt/[fixtureId]/: page.tsx
src/app/wallet/: page.tsx
src/components/: bet-details.tsx  chrome.tsx  connect-wallet-button.tsx  footer.tsx  hero-cta.tsx  live-odds.tsx  market-card.tsx  market-strip.tsx  modal.tsx  nav-balance.tsx  navbar.tsx  providers.tsx  stake-panel.tsx
src/idl/: doxoracle_escrow.json  doxoracle_escrow.ts
src/lib/: bets.ts  display-bets.ts  fixtures.ts  flags.ts  program.ts  resolver.ts  solana.ts  txline.ts
