[package]
name = "doxoracle-escrow"
version = "0.1.0"
description = "DoxOracle per-market USDC escrow with parimutuel payouts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "doxoracle_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.1", features = ["init-if-needed"] }
anchor-spl = "1.1"
